--- a/client/app/links/links.html
+++ b/client/app/links/links.html
@@ -1,3 +1,6 @@
-<div id='container'>
-  <!-- Your html here -->
+<div id='container' ng-controller = "LinksController">
+<ul>
+    <li ng-repeat = "link in data.links"></li>
+</ul>
+
 </div>
