--- a/client/app/auth/signin.html
+++ b/client/app/auth/signin.html
@@ -1,3 +1,12 @@
+
+<div class='navigation'>
+  <ul>
+    <li><a href='#/links' class='index'>All Links</a></li>
+    <li><a href='#/shorten' class='create'>Shorten</a></li>
+    <li><a href='#/signin' class='create'>Sign In</a></li>
+  </ul>
+</div>
+
 <div id='signin'>
   <h1>signin</h1>
   <form name="signinForm" ng-submit='signin()'>
