--- a/client/app/auth/signup.html
+++ b/client/app/auth/signup.html
@@ -1,3 +1,12 @@
+
+<div class='navigation'>
+  <ul>
+    <li><a href='#/links' class='index'>All Links</a></li>
+    <li><a href='#/shorten' class='create'>Shorten</a></li>
+    <li><a href='#/signin' class='create'>Sign In</a></li>
+  </ul>
+</div>
+
 <div id='signup'>
   <h1>signup</h1>
   <form name="signupForm" ng-submit='signup()'>
