--- a/client/app/links/links.html
+++ b/client/app/links/links.html
@@ -1,6 +1,20 @@
-<div id='container' ng-controller = "LinksController">
-<ul>
-    <li ng-repeat = "link in data.links"></li>
-</ul>
 
+<div class='navigation'>
+  <ul>
+    <li><a href='#/links' class='index'>All Links</a></li>
+    <li><a href='#/shorten' class='create'>Shorten</a></li>
+    <li><a href='#/signin' class='create'>Sign In</a></li>
+  </ul>
+</div>
+
+<div id='container' ng-model = "data.links">
+  <div ng-repeat = "link in data.links">
+    <img src='assets/redirect_icon.png'/>
+    <div class='info'>
+      <div class='visits'><span class='count'>{{link.visits}}</span>Visits</div>
+      <div class='title'>{{link.title}}</div>
+      <div class='original'>{{link.url}}</div>
+      <a href='{{link.base_url}}/{{link.code}}'>{{link.base_url}}/{{link.code}}</a>
+    </div>
+  </div>
 </div>
