--- a/client/app/shorten/shorten.html
+++ b/client/app/shorten/shorten.html
@@ -1,3 +1,12 @@
+
+<div class='navigation'>
+  <ul>
+    <li><a href='#/links' class='index'>All Links</a></li>
+    <li><a href='#/shorten' class='create'>Shorten</a></li>
+    <li><a href='#/signin' class='create'>Sign In</a></li>
+  </ul>
+</div>
+
 <div id='container'>
 <!-- Your code here -->
 
