Working on Shorten - getting internal server error

--- a/client/app/shorten/shorten.html
+++ b/client/app/shorten/shorten.html
@@ -8,7 +8,11 @@
 </div>
 
 <div id='container'>
-<!-- Your code here -->
+  <form ng-submit='addLink()'>
+      <input class='text' type='text' name='url' ng-model="data.links">
+      <input type='submit' value='Shorten'>
+  </form>
+  <img class='spinner' src='assets/spiffygif_46x46.gif'>
 
 </div>
 
