--- a/client/app/links/links.html
+++ b/client/app/links/links.html
@@ -8,7 +8,11 @@
 </div>
 
 <div id='container' ng-model = "data.links">
-  <div ng-repeat = "link in data.links">
+
+  <h3>Search:</h3>
+  <input type= "text" ng-model = "search">
+  <hr/>
+  <div ng-repeat = "link in data.links | filter: search | filter: link.visits">
     <img src='assets/redirect_icon.png'/>
     <div class='info'>
       <div class='visits'><span class='count'>{{link.visits}}</span>Visits</div>
