--- a/client/app/shorten/shorten.html
+++ b/client/app/shorten/shorten.html
@@ -9,7 +9,7 @@
 
 <div id='container'>
   <form ng-submit='addLink()'>
-      <input class='text' type='text' name='url' ng-model="data.links">
+      <input class='text' type='text' name='url' ng-model="link.url">
       <input type='submit' value='Shorten'>
   </form>
   <img class='spinner' src='assets/spiffygif_46x46.gif'>
