--- a/client/app/shorten/shorten.html
+++ b/client/app/shorten/shorten.html
@@ -8,11 +8,14 @@
 </div>
 
 <div id='container'>
-  <form ng-submit='addLink()'>
-      <input class='text' type='text' name='url' ng-model="link.url">
+  <form name="shortlyForm" ng-submit='addLink()' novalidate>
+      <input class='text' type='url' name='url' ng-model="link.url">
       <input type='submit' value='Shorten'>
   </form>
-  <img class='spinner' src='assets/spiffygif_46x46.gif'>
+
+  <div ng-if = "shortlyForm.url.$error.url && shortlyForm.$dirty">
+    <h3>Your URL sucks.... try again.</h3>
+  </div>
 
 </div>
 
